--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 10px;
+  margin: 10px 0;
   font-size: 28px;
   color: #ffffff;
 }
@@ -79,3 +79,8 @@ select:focus {
   color: #ccc;
 }
 
+img {
+  max-width: 100%;
+  height: 60px;
+  margin-bottom: 10px;
+}
