--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ header {
   margin-bottom: 20px;
 }
 
+.logo {
+  height: 60px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
 h1 {
   margin: 10px 0;
   font-size: 28px;
@@ -77,10 +83,4 @@ select:focus {
   margin-top: 15px;
   font-size: 14px;
   color: #ccc;
-}
-
-img {
-  max-width: 100%;
-  height: 60px;
-  margin-bottom: 10px;
 }
